# planpilot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/screenmind_todo/: config.py  db.py  main.py  meeting_models.py  meeting_schemas.py  models.py  overlay.py  schemas.py
src/screenmind_todo/api/: meeting_routes.py  routes.py
src/screenmind_todo/services/: active_window.py  analyzer.py  capture.py  evaluator.py  meeting_planner.py  ocr.py  ollama.py  task_engine.py  watcher.py
src/screenmind_todo/static/: app.js  index.html  styles.css
tests/: test_analyzer.py  test_evaluator.py  test_meeting_api.py  test_meeting_planner.py
tests/fixtures/: sample_meetings.json
